syntax = "proto3";

package io.harness.paging;

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

// Represents Page Request
message PageRequestGrpc {
  string offset = 1;
  string limit = 3;
  repeated string fieldsIncluded = 7;
  repeated string fieldsExcluded = 8;
}
